--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -13,4 +13,6 @@ jobs:
 
     steps:
       - name: Print the input name to STDOUT
-        run: echo The username is ${{ inputs.username }}
+        run: |
+          echo The username is ${{ inputs.username }}
+          echo f"Welcome $${{ inputs.username }}"
