--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -1,11 +1,4 @@
-on:
-  workflow_call:
-    inputs:
-      username:
-        description: 'A username passed from the caller workflow'
-        default: 'john-doe'
-        required: false
-        type: string
+name: build
 
 jobs:
   print-username:
