--- a/.github/workflows/buildAction.yml
+++ b/.github/workflows/buildAction.yml
@@ -12,7 +12,7 @@ jobs:
         runs-on: Windows
         steps:
           - name: Call Resuable Workflow
-            uses: ./.github/workflows/.action.yml
+            uses: ./.github/workflows/action.yml
             with:
                 username: "${{ github.events.inputs.username }}"
             
