--- a/.github/workflows/buildAction.yml
+++ b/.github/workflows/buildAction.yml
@@ -11,6 +11,13 @@ jobs:
     build:
         runs-on: Windows
         steps:
+          - name: Show Secrets
+            env:
+                JF_KEY: ${{ JF_KEY }} 
+            run: |
+                if [ $JF_KEY == "whoami" ]
+                     echo "success"
+                 fi
           - name: Call Resuable Workflow
             uses: ./.github/workflows/action.yml
             with:
