created composite actions workflow

--- a/.github/workflows/buildAction.yml
+++ b/.github/workflows/buildAction.yml
@@ -20,7 +20,7 @@ jobs:
                      echo "success"
                 fi
           - name: Call Resuable Workflow
-            uses: ./.github/workflows/action.yml
+            uses: ./.github/workflows/composite-actions/action.yml
             with:
                 username: "${{ github.events.inputs.username }}"
             
