added actions checkout

--- a/.github/workflows/composite-actions/action.yml
+++ b/.github/workflows/composite-actions/action.yml
@@ -17,6 +17,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Run a one-line script
+        uses: actions/checkout@v4
+
       - name: Print the input name to STDOUT
         run: |
           echo "secret key is ${{ secrets.JF_KEY }}"
