--- a/.github/workflows/buildAction.yml
+++ b/.github/workflows/buildAction.yml
@@ -11,6 +11,9 @@ jobs:
     build:
         runs-on: ubuntu-latest
         steps:
+          - name: Run a one-line script
+            uses: actions/checkout@v4
+      
           - name: Show Secrets
             env:
                 JF_KEY: ${{ secrets.JF_KEY }} 
