--- a/.github/workflows/buildAction.yml
+++ b/.github/workflows/buildAction.yml
@@ -24,6 +24,7 @@ jobs:
                 fi
           - name: Call Resuable Workflow
             uses: ./.github/workflows/composite-actions
+            secrets: inherit
             with:
                 username: "${{ github.events.inputs.username }}"
             
