--- a/.github/workflows/buildAction.yml
+++ b/.github/workflows/buildAction.yml
@@ -9,11 +9,10 @@ on:
       
 jobs:
     tests:
-        uses: ./.github/workflows/composite-actions/build.yml
+        uses: ./.github/workflows/composite-actions/build.yml@master
         secrets: inherit
         with:
-            username: "${{ github.events.inputs.username }}"
-            JF_KEY: "${{ secrets.JF_KEY }}"
+            username: ${{ github.events.inputs.username }}
 
     builds:
         runs-on: ubuntu-latest
@@ -21,4 +20,4 @@ jobs:
           - name: Run a one-line script
             uses: actions/checkout@v4
             env:
-                JF_KEY: "${{ secrets.JF_KEY }}"
+                JF_KEY: ${{ secrets.JF_KEY }}
