--- a/.github/workflows/buildAction.yml
+++ b/.github/workflows/buildAction.yml
@@ -12,7 +12,7 @@ jobs:
         uses: ./.github/workflows/composite-actions/build.yml@master
         secrets: inherit
         with:
-            username: ${{ github.events.inputs.username }}
+            username: ${{ github.event.inputs.username}} 
 
     builds:
         runs-on: ubuntu-latest
@@ -20,4 +20,4 @@ jobs:
           - name: Run a one-line script
             uses: actions/checkout@v4
             env:
-                JF_KEY: ${{ secrets.JF_KEY }}
+                JF_KEY: ${{ secrets.GITHUB_TOKEN }}
