test local action workflow

--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -5,4 +5,4 @@ jobs:
   local-action-testing:
     runs-on: ubuntu-latest
     steps:
-      - uses: ./actions/local-action
+      - uses: ./actions/action.yml
