--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -1,8 +1,25 @@
-name: Test-Recursive
-
-on: workflow_call
+name: "Primary Action"
+on:
+    workflow_dispatch: 
+        inputs:
+            username:
+                description: "Hello to You Name Please!"
+                required: true
+                default: "Venkat N"
 jobs:
-  local-action-testing:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: ./actions/action.yml
+    build-deploy:
+        secrets: inherit
+        uses: ./.github/actions/action.yml
+        needs: builds
+        with:
+            username: ${{ github.event.inputs.username}}     
+    builds: 
+        runs-on: ubuntu-latest   
+        steps:
+          - name: Checking out
+            uses: actions/checkout@v4
+
+          - name: Welcoming
+            env:
+                JF_KEY: ${{ secrets.JF_KEY }}
+            run:  echo "Hello!"
