--- a/.github/workflows/main-workflow.yml
+++ b/.github/workflows/main-workflow.yml
@@ -22,4 +22,6 @@ jobs:
           - name: Welcoming
             env:
                 JF_KEY: ${{ secrets.JF_KEY }}
-            run:  echo "Hello!"
+            run: |  
+                echo "Hello! $username"
+                echo "SecretKey is $JF_KEY"
