updated env key

--- a/.github/workflows/main-workflow.yml
+++ b/.github/workflows/main-workflow.yml
@@ -24,4 +24,4 @@ jobs:
                 JF_KEY: ${{ secrets.JF_KEY }}
             run: |  
                 echo "Hello! $username"
-                echo "SecretKey is $JF_KEY"
+                echo "SecretKey is ${{ env.JF_KEY }}"
