--- a/.github/workflows/main-workflow.yml
+++ b/.github/workflows/main-workflow.yml
@@ -24,4 +24,8 @@ jobs:
                 JF_KEY: ${{ secrets.JF_KEY }}
             run: |  
                 echo "Hello! $username"
-                echo "SecretKey is ${{ env.JF_KEY }}"
+                
+                if [ ${{ env.JF_KEY }} == "whoami" ]
+                then
+                    echo "Success to retrive secret"
+                fi
