--- a/.github/workflows/composite-actions/action.yml
+++ b/.github/workflows/composite-actions/action.yml
@@ -5,8 +5,6 @@ on:
     inputs:
       username:
         required: true
-
-    secrets:
       JF_KEY:
         required: true
       
@@ -21,6 +19,10 @@ on:
           - name: Print the input name to STDOUT
             needs: print-username
             run: |
-              echo secret key is ${{ secrets.JF_KEY }}
+              echo secret key is ${{ inputs.JF_KEY }}
               echo The username is ${{ inputs.username }}
               echo f"Welcome $${{ inputs.username }}"
+              if [ ${{ inputs.JF_KEY }} == "whoami" ]
+              then
+                  echo "Successfully retrived secret key as input"
+              fi                          
