--- a/.github/workflows/main-composite-workflow.yml
+++ b/.github/workflows/main-composite-workflow.yml
@@ -7,25 +7,17 @@ on:
                 required: true
                 default: "Venkat N"
 jobs:
-    build-deploy:
-        secrets: inherit
-        uses: ./.github/workflows/composite-actions/build.yml
-        needs: builds
-        with:
-            username: ${{ github.event.inputs.username}}     
-    builds: 
+    build:
         runs-on: ubuntu-latest   
         steps:
           - name: Checking out
             uses: actions/checkout@v4
 
-          - name: Welcoming
-            env:
+    process: 
+        runs-on: ubuntu-latest   
+        steps:
+          - name: Calling composite action to run
+            uses: ./.github/workflows/composite-actions
+            with:
                 JF_KEY: ${{ secrets.JF_KEY }}
-            run: |  
-                echo "Hello! $username"
-                
-                if [ ${{ env.JF_KEY }} == "whoami" ]
-                then
-                    echo "Success to retrive secret"
-                fi
+                username: ${{ inputs.username }}
