--- a/.github/workflows/composite-actions/action.yml
+++ b/.github/workflows/composite-actions/action.yml
@@ -14,7 +14,6 @@ runs:
     uses: actions/checkout@v4
 
   - name: Print the input name to STDOUT
-    shell: powershell
     run: |
       echo secret key is ${{ inputs.JF_KEY }}
       echo The username is ${{ inputs.username }}
@@ -22,4 +21,5 @@ runs:
       if [ ${{ inputs.JF_KEY }} == "whoami" ]
       then
           echo "Successfully retrived secret key as input"
-      fi                          
+      fi
+      shell: bash
